[package]
name = "rimworld-xml-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
quick-xml = "0.36"
walkdir = "2.5"
rfd = "0.15"
rayon = "1.10"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
ico = "0.3.0"
winresource = "0.1.17"
